@@ -20,6 +20,8 @@ Version 2.1.4
    - Cleanup of Imap4::command_fetchuid()
    - Cleanup of mh and maildir protocols
    - Feature: Support for mh protocol as used by Sylpheed
+   - Bugfix in "src/ui-properties.h" (when no SSL is available)
+   - Added include file for FreeBSD
 
 
 Version 2.1.3		2005-04-03 23:57
